@@ -131,17 +131,17 @@
                 </configuration>
             </plugin>
 
-            <!-- surefire совместим с Platform 1.11.x -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
+                    <!-- сохранить уже заданные флаги + включить разрешение динамических агентов -->
+                    <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
                     <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
 
-            <!-- shade и пр. без изменений -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
